project(speedygrow)
cmake_minimum_required(VERSION 3.5)
add_executable(speedygrow src/speedygrow.cpp)
find_package(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
install(TARGETS speedygrow RUNTIME DESTINATION build)
